test/dual-stack/ingress-services.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-target
  namespace: default
  annotations:
    coredns.io/target: redirect.here.
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.target.foo.org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: myservicea.foo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservice-wildcard
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-01
spec:
  ingressClassName: nginx
  rules:
    - host: "*.myservice.foo.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
  tls:
    - hosts:
        - "*.myservice.foo.org"
      secretName: ingress-wildcard-cert
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: backend
  sessionAffinity: None
  type: LoadBalancer
