test/dual-stack/k8s-gateway-values.yaml
nameOverride: k8s-gateway
image:
  repository: localhost:5000/coredns
  tag: latest
  pullPolicy: IfNotPresent

serviceType: NodePort

service:
  clusterIP: ""
  annotations: {}
  selector: {}
  ipFamilyPolicy: RequireDualStack

servers:
  - zones:
    - zone: foo.org
    port: 53
    servicePort: 32553
    plugins:
      - name: errors
      - name: health
        configBlock: |-
          lameduck 10s
      - name: ready
      - name: k8s_gateway
        parameters: foo.org
        configBlock: |-
          apex k8s-gateway.networking
          resources Ingress Service HTTPRoute
      - name: prometheus
        parameters: 0.0.0.0:9153
      - name: forward
        parameters: . /etc/resolv.conf
      - name: cache
        parameters: 30
      - name: loop
      - name: reload
      - name: loadbalance

livenessProbe:
  enabled: true
  initialDelaySeconds: 60
  periodSeconds: 10
  timeoutSeconds: 5
  failureThreshold: 5
  successThreshold: 1

readinessProbe:
  enabled: true
  initialDelaySeconds: 30
  periodSeconds: 5
  timeoutSeconds: 5
  failureThreshold: 1
  successThreshold: 1
